[gd_scene load_steps=9 format=3 uid="uid://c87u2t2spvcmv"]

[ext_resource type="Texture2D" uid="uid://dccwrged26vuk" path="res://Weapons/ranged_weapons/Jansa_gun/jansa.png" id="1_bn2mq"]
[ext_resource type="Script" path="res://Entities/Enemies/zergling.gd" id="1_pas7h"]
[ext_resource type="Script" path="res://Components/health_component.gd" id="3_lwqof"]
[ext_resource type="Script" path="res://Components/hurtbox_component.gd" id="4_n4ic5"]
[ext_resource type="Script" path="res://Entities/Enemies/progress_bar.gd" id="5_odfca"]
[ext_resource type="Script" path="res://Components/status_effect_handler_component.gd" id="9_su5ic"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0r6nu"]
radius = 16.0
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qc217"]
radius = 21.0

[node name="Zergling" type="CharacterBody2D" node_paths=PackedStringArray("health_component") groups=["Enemy"]]
collision_layer = 3
script = ExtResource("1_pas7h")
health_component = NodePath("HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_0r6nu")
debug_color = Color(0.99712, 0, 0.172832, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.0591002, 0.0591002)
texture = ExtResource("1_bn2mq")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_lwqof")
max_health = 100

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "status_effects_handler")]
script = ExtResource("4_n4ic5")
health_component = NodePath("../HealthComponent")
status_effects_handler = NodePath("../StatusEffectHandler")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_qc217")

[node name="ProgressBar" type="ProgressBar" parent="." node_paths=PackedStringArray("health_component")]
modulate = Color(0.94723, 0, 0.363081, 1)
offset_left = -26.0
offset_top = -37.0
offset_right = 26.0
offset_bottom = -26.0
show_percentage = false
script = ExtResource("5_odfca")
health_component = NodePath("../HealthComponent")

[node name="StatusEffectHandler" type="Node2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("9_su5ic")
health_component = NodePath("../HealthComponent")
